# projeto_intranet

./: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: database.py  dependencies.py  security.py  settings.py  utils.py
app/models/: role.py  user.py  user_role.py
app/repositories/: role.py  user.py
app/routers/: auth.py  role.py  user.py
app/services/: auth.py
app/views/static/css/: custom.css
app/views/templates/: base.html  error.html  index.html  login.html  roles.html  teste.html  users.html
app/views/templates/fragments/: navbar.html  sidebar.html
